--- a/templates/index.html
+++ b/templates/index.html
@@ -136,7 +136,7 @@
 <body>
     <div class="container">
         <h1>Weather App</h1>
-        <p>developed by Taanish</p>
+        <p>developed by Taaanish</p>
         <form method="POST">
             <input type="text" name="city" placeholder="Enter city name" required>
             <button type="submit">Get Weather</button>
