--- a/templates/index.html
+++ b/templates/index.html
@@ -135,7 +135,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Weather App</h1>
+        <h1>Get Weather</h1>
         <form method="POST">
             <input type="text" name="city" placeholder="Enter city name" required>
             <button type="submit">Get Weather</button>
