--- a/templates/index.html
+++ b/templates/index.html
@@ -138,7 +138,7 @@
         <h1>Get</h1>
         <form method="POST">
             <input type="text" name="city" placeholder="Enter city name" required>
-            <button type="submit">Get Weather</button>
+            <button type="submit">Get Weather...</button>
         </form>
         {% if weather_data %}
             <div class="weather-info">
