--- a/templates/index.html
+++ b/templates/index.html
@@ -135,10 +135,10 @@
 </head>
 <body>
     <div class="container">
-        <h1>Get</h1>
+        <h1>wather App</h1>
         <form method="POST">
             <input type="text" name="city" placeholder="Enter city name" required>
-            <button type="submit">Weather</button>
+            <button type="submit">Get Weather</button>
         </form>
         {% if weather_data %}
             <div class="weather-info">
